adicionando os vicunlos dos arquivos CSS e JavaScript

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Conectando aos melhores
     Profissionais do mercado.">
     <meta name="keywords" content="profissionais, prestadores de serviços, autônomos">
+
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
@@ -27,6 +29,8 @@
             </div>
         </div>
     </header>
+
+    <script src="js/main.js"></script>
 </body>
 
 </html>
