Headline do Banner

--- a/index.html
+++ b/index.html
@@ -28,8 +28,17 @@
                 <a href="registrar.html">registrar</a>
             </div>
         </div>
+
+
     </header>
 
+    <div id="banner">
+        <div class="container">
+            <h2>Conectando você aos melhores Profissionais</h2>
+            <p>Descubra a Qualidade e Confiabilidade em nossos parceiros</p>
+        </div>
+    </div>
+    <form action=""></form>
     <script src="js/main.js"></script>
 </body>
 
