--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="description" content="Conectando aos melhores
     Profissionais do mercado.">
     <meta name="keywords" content="profissionais, prestadores de serviços, autônomos">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="/css/main.css">
 </head>
@@ -39,7 +41,27 @@
             <p>Descubra a Qualidade e Confiabilidade em nossos parceiros</p>
         </div>
     </div>
-    <form action=""></form>
+    <div id="form-pesquisa">
+        <form action="#" method="get">
+            <div class="form-icon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" name="search" placeholder="O que você está procurando?">
+            </div>
+            <div class="form-icon">
+                <i class="fa-solid fa-location-arrow"></i>
+                <input type="text" name="location" placeholder="Sua localização">
+            </div>
+            <button type="submit">Procurar</button>
+        </form>
+    </div>
+    <div class="lista-servicos-banner">
+        <ul>
+            <li>Manutenção de Computadores</li>
+            <li>Mecânico</li>
+            <li>Barbeiro</li>
+        </ul>
+        </div>
+    </div>    
     <script src="js/main.js"></script>
 </body>
 
