--- a/index.html
+++ b/index.html
@@ -60,8 +60,34 @@
             <li>Mecânico</li>
             <li>Barbeiro</li>
         </ul>
-        </div>
-    </div>    
+    </div>
+    </div>
+    <main class="container">
+        <section id="secao-categorias">
+            <div class="secao-titulo">
+                <div class="titulo">
+                    <h2>Categorias</h2>
+                    <a href="#">Ver mais</a>
+                </div>
+                <p>Encontre Profissionais na Categoria Desejada</p>
+            </div>
+
+            <div class="lista-card-categorias">
+                <div>
+                    <img src="img/categoria-carro.jpg" alt="carro">
+                    <span>Mecânico</span>
+                </div>
+                <div>
+                    <img src="img/categoria-carro.jpg" alt="carro">
+                    <span>Mecânico</span>
+                </div>
+                <div>
+                    <img src="img/categoria-carro.jpg" alt="carro">
+                    <span>Mecânico</span>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="js/main.js"></script>
 </body>
 
